add markup structure

--- a/index.html
+++ b/index.html
@@ -5,8 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booleaner</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
+<!--All'interno della cartella del repo, create una sottocartella img nella quale inserirete le immagini necessarie.
+Sempre nella cartella repo create la cartella css nella quale inserirete creandolo/i il/i vostri file css.
+Attezione:
+Ricordate che potreste aver bisogno di una regola css che avete usato durante il fundamental... :sorridente:
+Bonus
+Partendo dallo stesso HTML, create un secondo file CSS per crearne una versione diversa.
+Si può fare? Alla grande! https://stylestage.dev/
+Questa versione avrà il corpo pagina più stretto e centrato. Occhio all'header il cui background rimane invece a tutta pagina.
+Ricordatevi di pushare di tanto in tanto per consegnare il vostro lavoro in modo incrementale.-->
 <body>
     
+    <header></header>
+    <!-- /header -->
+
+    <main>
+        <section>
+            <title></title>
+        </section>
+        <!-- /title section-->
+
+        <section>
+            <img src="" alt="">
+            <img src="" alt="">
+        </section>
+        <!-- /imgs section-->
+
+        <section>
+            <p>
+
+            </p>
+            <!-- <⁄paragraph -->
+
+            <ul>
+               <li></li>
+               <li></li>
+               <li></li>
+            </ul>
+            <!-- /list -->
+
+            <table>
+
+            </table>
+            <!-- /tab -->
+
+            <p>
+        
+            </p>
+        </section>
+        <!-- /paragraph section -->
+    </main>
+    <!-- /main -->
+    <footer>
+        <img src="" alt="">
+        <img src="" alt="">
+    </footer>
+
+
+
+
 </body>
 </html>
