--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@ Questa versione avrà il corpo pagina più stretto e centrato. Occhio all'header
 Ricordatevi di pushare di tanto in tanto per consegnare il vostro lavoro in modo incrementale.-->
 <body>
     
-    <header></header>
+    <header>
+        <img src="./img/logo.svg" alt="logo the booleaner">
+    </header>
     <!-- /header -->
 
     <main>
         <section>
-            <title></title>
+            <title>
+                <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners Lee</h1>
+            </title>
         </section>
         <!-- /title section-->
 
@@ -63,9 +67,6 @@ Ricordatevi di pushare di tanto in tanto per consegnare il vostro lavoro in modo
         <img src="" alt="">
         <img src="" alt="">
     </footer>
-
-
-
 
 </body>
 </html>
