--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ Ricordatevi di pushare di tanto in tanto per consegnare il vostro lavoro in modo
         <!-- /title section-->
 
         <section>
-            <img src="" alt="">
-            <img src="" alt="">
+            <img src="./img/tim-1.jpg" alt="">
+            <img src="./img/tim-2.jpg" alt="">
         </section>
         <!-- /imgs section-->
 
